# longcot

./: .gitignore  LICENSE  README.md  pyproject.toml  run_eval.py  run_inference.py
src/: __init__.py  _llm.py  _loader.py  _parsing.py  _types.py  _verifier.py
src/_verify/: __init__.py  _chemistry.py  _chess.py  _cs.py  _fallback.py  _math.py  _regexes.py
src/_verify/logic/: __init__.py  _blocksworld.py  _dungeon.py  _hanoi.py  _packaging.py  _sokoban.py  _sudoku.py  _trapezoid.py  _wizards.py
src/configs/: anthropic_sonnet.yaml  gemini_pro.yaml  oai_gpt52.yaml  or_deepseek.yaml  or_glm.yaml  or_grok.yaml  or_kimi.yaml
